:tada: modify some configuration informations so that run it successfully
due to my mysql version is : 8.0.11 and java version is :  11.0.4